[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celery-ranch"
version = "0.1.1"
description = "Celery Ranch: A Celery extension providing LRU-based task prioritization"
readme = "README.md"
authors = [
    {name = "Matthew DesEnfants", email = "matt@teleos.ltd"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.8"
dependencies = [
    "celery>=5.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.2",
    "redis>=5.0.1",
    "types-redis",
    "types-setuptools",
    "build",
    "twine",
]
redis = [
    "redis>=5.0.1",
]

[project.urls]
Homepage = "https://github.com/teleos-consulting/celery-ranch"
Issues = "https://github.com/teleos-consulting/celery-ranch/issues"

[tool.mypy]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = false
warn_redundant_casts = true
warn_return_any = false
warn_unused_ignores = true
disallow_subclassing_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["build/"]

[[tool.mypy.overrides]]
module = "celery_ranch.utils.backlog"
ignore_errors = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["celery_ranch"]
omit = ["examples/*", "build/*", "tests/integration/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]